- Added gc log file pause processing explanation and examples - Updated version